@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_encoding.c,v 1.103.2.16 2006/02/06 13:17:06 dmitry Exp $ */
+/* $Id: php_encoding.c,v 1.103.2.17 2006/03/03 09:20:33 dmitry Exp $ */
 
 #include <time.h>
 
@@ -246,6 +246,23 @@ void whiteSpace_collapse(char* str)
 	*pos = '\0';
 }
 
+static encodePtr find_encoder_by_type_name(sdlPtr sdl, const char *type)
+{
+	if (sdl && sdl->encoders) {
+		HashPosition pos;
+		encodePtr *enc;
+
+		for (zend_hash_internal_pointer_reset_ex(sdl->encoders, &pos);
+		     zend_hash_get_current_data_ex(sdl->encoders, (void **) &enc, &pos) == SUCCESS;
+		     zend_hash_move_forward_ex(sdl->encoders, &pos)) {
+		    if (strcmp((*enc)->details.type_str, type) == 0) {
+				return *enc;
+			}
+		}
+	}
+	return NULL;
+}
+
 xmlNodePtr master_to_xml(encodePtr encode, zval *data, int style, xmlNodePtr parent)
 {
 	xmlNodePtr node = NULL;
@@ -328,7 +345,12 @@ xmlNodePtr master_to_xml(encodePtr encode, zval *data, int style, xmlNodePtr par
 			    	encodePtr enc = get_encoder(SOAP_GLOBAL(sdl), SOAP_GLOBAL(sdl)->target_ns, type_name);
 			    	if (enc) {
 			    		encode = enc;
-				 	}		        
+				 	} else if (SOAP_GLOBAL(sdl)) {
+				 		enc = find_encoder_by_type_name(SOAP_GLOBAL(sdl), type_name);
+				    	if (enc) {
+				    		encode = enc;
+				    	}
+				 	}
 			        break;
 				}
 			}
@@ -717,7 +739,7 @@ static xmlNodePtr to_xml_string(encodeTypePtr type, zval *data, int style, xmlNo
 
 		zval_copy_ctor(&tmp);
 		convert_to_string(&tmp);
-		str = php_escape_html_entities(Z_STRVAL(tmp), Z_STRLEN(tmp), &new_len, 0, 0, NULL TSRMLS_CC);	
+		str = php_escape_html_entities(Z_STRVAL(tmp), Z_STRLEN(tmp), &new_len, 0, 0, NULL TSRMLS_CC);
 		zval_dtor(&tmp);
 	}
 
@@ -758,7 +780,7 @@ static xmlNodePtr to_xml_base64(encodeTypePtr type, zval *data, int style, xmlNo
 	xmlAddChild(parent, ret);
 	FIND_ZVAL_NULL(data, ret, style);
 
-	if (Z_TYPE_P(data) == IS_STRING) {			
+	if (Z_TYPE_P(data) == IS_STRING) {
 		str = php_base64_encode((unsigned char*)Z_STRVAL_P(data), Z_STRLEN_P(data), &str_len);
 		xmlNodeSetContentLen(ret, str, str_len);
 		efree(str);
@@ -791,14 +813,14 @@ static xmlNodePtr to_xml_hexbin(encodeTypePtr type, zval *data, int style, xmlNo
 	xmlAddChild(parent, ret);
 	FIND_ZVAL_NULL(data, ret, style);
 
-	if (Z_TYPE_P(data) != IS_STRING) {			
+	if (Z_TYPE_P(data) != IS_STRING) {
 		tmp = *data;
 		zval_copy_ctor(&tmp);
 		convert_to_string(&tmp);
 		data = &tmp;
 	}
 	str = (unsigned char *) safe_emalloc(Z_STRLEN_P(data) * 2, sizeof(char), 1);
-	
+
 	for (i = j = 0; i < Z_STRLEN_P(data); i++) {
 		str[j++] = hexconvtab[((unsigned char)Z_STRVAL_P(data)[i]) >> 4];
 		str[j++] = hexconvtab[((unsigned char)Z_STRVAL_P(data)[i]) & 15];
@@ -1157,7 +1179,7 @@ static void model_to_zval_object(zval *ret, sdlContentModelPtr model, xmlNodePtr
 							add_next_index_zval(array, val);
 						} while ((node = get_node(node->next, model->u.element->name)) != NULL);
 						val = array;
-					} else if ((SOAP_GLOBAL(features) & SOAP_SINGLE_ELEMENT_ARRAYS) && 
+					} else if ((SOAP_GLOBAL(features) & SOAP_SINGLE_ELEMENT_ARRAYS) &&
 					           (model->max_occurs == -1 || model->max_occurs > 1)) {
 						zval *array;
 
@@ -1200,7 +1222,7 @@ static void model_to_zval_object(zval *ret, sdlContentModelPtr model, xmlNodePtr
 }
 
 /* Struct encode/decode */
-static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
+static zval *to_zval_object_ex(encodeTypePtr type, xmlNodePtr data, zend_class_entry *pce)
 {
 	zval *ret;
 	xmlNodePtr trav;
@@ -1210,7 +1232,9 @@ static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
 	zend_bool redo_any = 0;
 	TSRMLS_FETCH();
 
-	if (SOAP_GLOBAL(class_map) && type->type_str) {
+	if (pce) {
+		ce = pce;
+	} else if (SOAP_GLOBAL(class_map) && type->type_str) {
 		zval             **classname;
 		zend_class_entry  *tmp;
 
@@ -1253,7 +1277,20 @@ static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
 			    sdlType->encode->details.sdl_type->kind != XSD_TYPEKIND_SIMPLE &&
 			    sdlType->encode->details.sdl_type->kind != XSD_TYPEKIND_LIST &&
 			    sdlType->encode->details.sdl_type->kind != XSD_TYPEKIND_UNION) {
-				ret = master_to_zval_int(sdlType->encode, data);
+
+			    if (ce != ZEND_STANDARD_CLASS_DEF_PTR &&
+			        sdlType->encode->to_zval == sdl_guess_convert_zval &&
+			        sdlType->encode->details.sdl_type != NULL &&
+			        (sdlType->encode->details.sdl_type->kind == XSD_TYPEKIND_COMPLEX ||
+			         sdlType->encode->details.sdl_type->kind == XSD_TYPEKIND_RESTRICTION ||
+			         sdlType->encode->details.sdl_type->kind == XSD_TYPEKIND_EXTENSION) &&
+			        (sdlType->encode->details.sdl_type->encode == NULL ||
+			         (sdlType->encode->details.sdl_type->encode->details.type != IS_ARRAY &&
+			          sdlType->encode->details.sdl_type->encode->details.type != SOAP_ENC_ARRAY))) {
+					ret = to_zval_object_ex(&sdlType->encode->details, data, ce);
+			    } else {
+					ret = master_to_zval_int(sdlType->encode, data);
+				}
 				FIND_XML_NULL(data, ret);
 				if (get_zval_property(ret, "any" TSRMLS_CC) != NULL) {
 					unset_zval_property(ret, "any" TSRMLS_CC);
@@ -1280,7 +1317,7 @@ static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
 		if (sdlType->model) {
 			model_to_zval_object(ret, sdlType->model, data, sdl TSRMLS_CC);
 			if (redo_any && get_zval_property(ret, "any" TSRMLS_CC) == NULL) {
-				model_to_zval_any(ret, data->children TSRMLS_CC);				
+				model_to_zval_any(ret, data->children TSRMLS_CC);
 		  }
 		}
 		if (sdlType->attributes) {
@@ -1357,6 +1394,12 @@ static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
 	}
 	return ret;
 }
+
+static zval *to_zval_object(encodeTypePtr type, xmlNodePtr data)
+{
+	return to_zval_object_ex(type, data, NULL);
+}
+
 
 static int model_to_xml_object(xmlNodePtr node, sdlContentModelPtr model, zval *object, int style, int strict TSRMLS_DC)
 {
@@ -1598,7 +1641,7 @@ static xmlNodePtr to_xml_object(encodeTypePtr type, zval *data, int style, xmlNo
 				zval *tmp = get_zval_property(data, "_" TSRMLS_CC);
 				if (tmp) {
 					xmlParam = master_to_xml(enc, tmp, style, parent);
-				} else if (prop == NULL) {					
+				} else if (prop == NULL) {
 					xmlParam = master_to_xml(enc, data, style, parent);
 				} else {
 					xmlParam = xmlNewNode(NULL,"BOGUS");
@@ -1693,7 +1736,7 @@ static xmlNodePtr to_xml_object(encodeTypePtr type, zval *data, int style, xmlNo
 								   an implicit schema. Otherwise, use form.
 								*/
 								if ((*attr)->namens &&
-								    (!strncmp((*attr)->namens, XML_NAMESPACE, sizeof(XML_NAMESPACE)) || 
+								    (!strncmp((*attr)->namens, XML_NAMESPACE, sizeof(XML_NAMESPACE)) ||
 								     (*attr)->form == XSD_FORM_QUALIFIED)) {
 									xmlNsPtr nsp = encode_add_ns(xmlParam, (*attr)->namens);
 
@@ -2790,7 +2833,7 @@ static zval *to_zval_any(encodeTypePtr type, xmlNodePtr data)
 }
 
 static xmlNodePtr to_xml_any(encodeTypePtr type, zval *data, int style, xmlNodePtr parent)
-{	
+{
 	xmlNodePtr ret;
 
 	if (Z_TYPE_P(data) == IS_STRING) {
@@ -3157,7 +3200,7 @@ static encodePtr get_array_type(xmlNodePtr node, zval *array, smart_str *type TS
 
 	if (different || count == 0) {
 		smart_str_appendl(type, "xsd:anyType", 11);
-		return get_conversion(XSD_ANYTYPE);		
+		return get_conversion(XSD_ANYTYPE);
 	} else {
 		encodePtr enc;
 
